syntax = "proto3";
option go_package = "./;proto";

service User {
  rpc GetUserList(PageInfoRequest) returns(UserListResponse); //用户列表
}

message PageInfoRequest {
  uint32 page_num = 1;
  uint32 page_size = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  uint64 birthday = 5;
  uint32 gender = 6;
  uint32 role = 7;

}

message UserListResponse {
  int32  total = 1;
  repeated UserInfoResponse data = 2;
}
